# file-catalog-indexer

./: .gitignore  .pylintrc  CHANGELOG.md  README.md  all_paths.py  delocator.py  directory_scanner.py  file_utils.py  generator.py  indexer.py  indexer_make_dag.py  indexer_only.py  indexer_script.py  metadata.py  metadata_manager.py  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  suru  tox.ini
.circleci/: config.yml
.github/workflows/: codeql.yml  wipac-cicd.yml
api/metadata/: i3.py
data/: sample_steering_parameters.py  untitled.py
file-catalog-indexer/: requirements.txt
indexer/: __init__.py  client_auth.py  config.py  defaults.py  delocate.py  generate.py  index.py  indexer.py  indexer_make_dag.py  metadata.py  metadata_manager.py
indexer/metadata/: basic.py  i3.py  metadata.py
indexer/utils/: file_utils.py  types.py  utils.py
indexer_api/utils/: types.py  utils.py
resources/: filename_pattern_finder.py  filename_pattern_regexer.py  get_nonindexed_files.py  icecube_combo.sh  indexer_env.sh  indexer_make_dag.py  softlink.py
resources/all_paths/: all_paths.py  all_paths_make_condor.py  common_args.py  directory_scanner.py  traverser.py
resources/fc_cleanup/: cleanup.py  cleanup_near_duplicates.py  find_by_logical_name.py
resources/filename_patterns/: by_frequency.py  filename_pattern_finder.py  filename_pattern_regexer.py  fpf_stage2.1.py
resources/find_nonindexed/: get_nonindexed_files.py  make_condor.py
resources/path_collector/: common_args.py  data-sim.sh  (+4 more)
tests/: test_filename_parsing.py  test_path_filtering.py
(+58 files in other folders)
