[options]
packages = find:
install_requires =
	bitmath
	git+https://github.com/WIPACrepo/file_catalog@v1.7.5#egg=file_catalog
	git+https://github.com/WIPACrepo/iceprod@v2.5.10#egg=iceprod
	PyMySQL
	requests
	requests-futures
	requests-toolbelt
	typing-extensions
	wipac-rest-tools[telemetry]
	xmltodict

[options.package_data]
* = py.typed

[tool:pytest]
flake8-ignore = E501 W503