[wipac:cicd_setup_builder]
pypi_name = wipac-file-catalog-indexer
python_min = 3.6
keywords_spaced = indexer metadata data warehouse archive L2 PFDST PFFilt PFRaw i3 simulation File Catalog iceprod

[options]
packages = find:
install_requires =
	bitmath
	iceprod
	PyMySQL
	requests
	requests-futures
	requests-toolbelt
	typing-extensions
	wipac-file-catalog
	wipac-rest-tools[telemetry]
	xmltodict

[options.package_data]
* = py.typed

[tool:pytest]
flake8-ignore = E501 W503